使用 Colaboratory 建立

--- a/研習.ipynb
+++ b/研習.ipynb
@@ -6,7 +6,7 @@
       "name": "研習.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNo9qd7Qa2yA7rJlT/bCqsk",
+      "authorship_tag": "ABX9TyMoJKH3tCXa2K6iUD50AKQc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,274 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M34pL2_pmrJp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "fc7df058-0b17-403e-8564-e6c63a4fb358"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "date = time.localtime()\t\n",
+        "print(date)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "time.struct_time(tm_year=2020, tm_mon=8, tm_mday=20, tm_hour=6, tm_min=42, tm_sec=30, tm_wday=3, tm_yday=233, tm_isdst=0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OSrfNYmJm-5n",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8e04113d-5ffb-475e-b074-b6e2e1982df1"
+      },
+      "source": [
+        "list1=range(10)\n",
+        "print(list1)\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "range(0, 10)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oDHR-DmN19pz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "563e32ba-bda3-4cb1-e80a-1655885ef92a"
+      },
+      "source": [
+        "print(list(list1))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9uS3oUIgnMDP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "30337de5-05ff-4b03-e1b0-9c14eb1d7d16"
+      },
+      "source": [
+        "list2=range(-4,5)\n",
+        "print(list(list2))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[-4, -3, -2, -1, 0, 1, 2, 3, 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VK7gFRjnRwu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "5b335548-81a5-44d4-ea53-9b8e6afac739"
+      },
+      "source": [
+        "for n in range(5):\n",
+        "  print(n)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m93HavNsnWqd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e3305720-2a9b-4ee6-e11b-e288acc3dbf5"
+      },
+      "source": [
+        "for n in range(10):\n",
+        "    print(n, end='@')\n",
+        "\n",
+        "    #print(n, end='%%%%')"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0@1@2@3@4@5@6@7@8@9@"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TgBTrWYvndVW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "d3d75384-1018-4770-a352-9fd78e96c141"
+      },
+      "source": [
+        "mysum = 0\n",
+        "\n",
+        "for n in range(5):\n",
+        "  mysum += n\n",
+        "  print(mysum)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "3\n",
+            "6\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOz16GuBnldG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dbc27e67-460f-4730-9e17-cbd879aa08ca"
+      },
+      "source": [
+        "numbers = [21, 4, 35, 1, 8, 7, 3, 6, 9]\n",
+        "my_numbers = []\n",
+        "\n",
+        "for number in numbers:\n",
+        "  if (number % 2 != 0): \n",
+        "    my_numbers.append(number)\n",
+        "\n",
+        "print(my_numbers)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[21, 35, 1, 7, 3, 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YaNHUBjLnrvf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8e5a823a-a437-485f-be04-91c7614e0979"
+      },
+      "source": [
+        "my_numbers2 = []\n",
+        "for number in numbers:\n",
+        "  if (number % 2 == 0): \n",
+        "    my_numbers2.append(number)\n",
+        "\n",
+        "print(my_numbers2)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4, 8, 6]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9zDMlZswnRod",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
